<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="thanks_for_rasrab">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eamil_rasrab">gremwiz@yandex.ru</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/?from=new_landing_android-developer</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="message_for_rasrab">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="input_hint">Поиск</string>
    <string name="clear">Очистить</string>
    <string name="not_apps_for_sent_email">Нет доступных приложений для отправки письма</string>
    <string name="not_apps_for_share_link">Нет доступных приложений чтобы поделиться ссылкой!</string>
    <string name="url_mail">mailto:</string>
    <string name="base_url_itunes">https://itunes.apple.com</string>
    <string name="refresh">Обновить</string>
    <string name="textNotFound">Ничего не нашлось</string>
    <string name="textProblemWithInternet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="yesterday_remastered_2009">Yesterday (Remastered 2009)</string>
    <string name="the_beatles">The Beatles</string>
    <string name="_0_30">0:30</string>
    <string name="duration">Длительность</string>
    <string name="_5_35">5:35</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="_1965">1965</string>
    <string name="genre">Жанр</string>
    <string name="rock">Rock</string>
    <string name="country">Страна</string>
    <string name="greatBritain">Великобритания</string>
</resources>