<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_left_16"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_12"
        android:layout_marginBottom="@dimen/margin_bottom_60"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            style="@style/arrowBack" />

        <TextView
            style="@style/textSettingsStyle"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchDarkMode"
        style="@style/switchStyle"
        android:text="@string/dark_theme" />

    <LinearLayout style="@style/linearLayoutSettingsStyle"
        android:id="@+id/share_app">

        <TextView
            style="@style/textSettingsStyle"
            android:text="@string/share_app" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share_app" />
    </LinearLayout>

    <LinearLayout style="@style/linearLayoutSettingsStyle">

        <TextView
            style="@style/textSettingsStyle"
            android:text="@string/write_support" />

        <ImageView
            android:id="@+id/write_support"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/write_support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_agreement"
        style="@style/linearLayoutSettingsStyle">

        <TextView
            style="@style/textSettingsStyle"
            android:text="@string/user_agreement" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>
</LinearLayout>