<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.067" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.933" />

    <ImageView
        android:id="@+id/backArrow"
        style="@style/arrowBackAudioPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_minus_8"
        android:layout_marginTop="@dimen/margin_top_16"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageTrack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_40"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toTopOf="@id/nameTrack"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/backArrow" />

    <TextView
        android:id="@+id/nameTrack"
        style="@style/nameTrack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_24"
        android:text="@string/yesterday_remastered_2009"
        app:layout_constraintBottom_toTopOf="@id/nameArtist"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/imageTrack" />

    <TextView
        android:id="@+id/nameArtist"
        style="@style/nameArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_12"
        android:layout_marginBottom="@dimen/margin_bottom_28"
        android:text="@string/the_beatles"
        app:layout_constraintBottom_toTopOf="@id/button_add_in_playList"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/nameTrack" />

    <ImageView
        android:id="@+id/button_add_in_playList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_add_in_playlist"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/button_play" />

    <ImageView
        android:id="@+id/button_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/button_play"
        app:layout_constraintBottom_toTopOf="@id/time_to_play"
        app:layout_constraintEnd_toStartOf="@id/button_like"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_add_in_playList"
        app:layout_constraintTop_toBottomOf="@id/nameArtist" />

    <ImageView
        android:id="@+id/button_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_like"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:layout_constraintTop_toTopOf="@id/button_play" />

    <TextView
        android:id="@+id/time_to_play"
        style="@style/timeToPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4"
        android:text="@string/_0_30"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

    <TextView
        android:id="@+id/title_duration_track"
        style="@style/titleFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_40"
        android:text="@string/duration"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/time_to_play" />

    <TextView
        android:id="@+id/durationTrack"
        style="@style/valueFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_40"
        android:text="@string/_5_35"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/time_to_play" />

    <TextView
        android:id="@+id/title_collection_name"
        style="@style/titleFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/album"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/title_duration_track" />

    <TextView
        android:id="@+id/collection_name"
        style="@style/valueFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/yesterday_remastered_2009"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/durationTrack" />

    <TextView
        android:id="@+id/title_release_date"
        style="@style/titleFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/title_collection_name" />

    <TextView
        android:id="@+id/release_date"
        style="@style/valueFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/_1965"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/collection_name" />

    <TextView
        android:id="@+id/title_primary_genre_name"
        style="@style/titleFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/genre"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/title_release_date" />

    <TextView
        android:id="@+id/primary_genre_name"
        style="@style/valueFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/rock"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/release_date" />

    <TextView
        android:id="@+id/title_country"
        style="@style/titleFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginBottom="@dimen/margin_bottom_28"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/title_primary_genre_name" />

    <TextView
        android:id="@+id/country"
        style="@style/valueFieldInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginBottom="@dimen/margin_bottom_28"
        android:text="@string/greatBritain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/primary_genre_name" />
</androidx.constraintlayout.widget.ConstraintLayout>