<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_16"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginBottom="@dimen/margin_bottom_28"
        android:fontFamily="@font/ys_display_medium"
        android:text="Playlist maker"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearch"
            style="@style/buttonMainStyle"
            android:text="@string/search"
            app:icon="@drawable/light_mode" />

        <Button
            android:id="@+id/buttonMediateka"
            style="@style/buttonMainStyle"
            android:text="@string/mediateka"
            app:icon="@drawable/mediatek" />

        <Button
            android:id="@+id/buttonSettings"
            style="@style/buttonMainStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings" />
    </LinearLayout>

</LinearLayout>
